--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,19 @@ name: CI
 
 on:
   push:
-    branches: [main, master, develop]
+    branches:
+      - main
+      - master
+      - develop
   pull_request:
-    branches: [main, master, develop]
+    branches:
+      - main
+      - master
+      - develop
 
 jobs:
-  lint-and-test:
-    name: Lint, Type Check, and Test
+  test:
+    name: Test & Lint
     runs-on: ubuntu-latest
 
     strategy:
@@ -31,45 +37,19 @@ jobs:
       - name: Run linter
         run: npm run lint
 
-      - name: Check formatting
-        run: npm run format:check
-
       - name: Type check
         run: npm run type-check
 
       - name: Run tests
-        run: npm run test:coverage
-
-      - name: Upload coverage
-        uses: codecov/codecov-action@v4
-        if: matrix.node-version == '20.x'
-        with:
-          files: ./coverage/coverage-final.json
-          fail_ci_if_error: false
-
-  build:
-    name: Build Package
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
+        run: npm test
 
       - name: Build package
         run: npm run build
 
-      - name: Check build artifacts
+      - name: Check build output
         run: |
-          test -f dist/index.cjs.js || exit 1
-          test -f dist/index.esm.js || exit 1
-          test -f dist/index.d.ts || exit 1
-
+          ls -la dist/
+          test -f dist/index.cjs.js
+          test -f dist/index.esm.js
+          test -f dist/index.d.ts
+          test -f dist/index.d.cts
