--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,9 @@ name: Release
 
 on:
   push:
-    branches: [main, master]
+    branches:
+      - main
+      - master
 
 permissions:
   contents: write
@@ -11,9 +13,10 @@ permissions:
 
 jobs:
   release:
-    name: Semantic Release
+    name: Release
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
+    # Only run on main/master branch, not on forks
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
 
     steps:
       - name: Checkout code
@@ -33,15 +36,21 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm run test:coverage
+        run: npm test
 
-      - name: Build
+      - name: Build package
         run: npm run build
 
-      - name: Semantic Release
+      - name: Verify build output
+        run: |
+          ls -la dist/
+          test -f dist/index.cjs.js
+          test -f dist/index.esm.js
+          test -f dist/index.d.ts
+          test -f dist/index.d.cts
+
+      - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
-        continue-on-error: true
-
+        run: npm run release
