feat: updated geo-locations, event validator for essential tracking + custom ip conf

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,10 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          # Skip audit for dev dependencies (vulnerabilities are in semantic-release, npm itself)
+          # These don't affect the published package
+          npm ci --audit=false --fund=false
 
       - name: Run tests
         run: npm test
